--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "slack-integrator",
   "version": "0.0.1",
-  "description": "Starter kit for creating Slack integrations",
-  "main": "app.js",
+  "description": "Express-based starter kit for creating Slack integrations",
+  "main": "integration.js",
   "scripts": {
     "test": "node_modules/.bin/mocha"
   },
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "mocha": "1.14.x",
-    "supertest": "0.15.x"
+    "supertest": "0.15.x",
+    "nock": "0.51.x"
   }
 }
