fix package.json "main"

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "slack-integrator",
   "version": "0.0.2",
   "description": "Express-based starter kit for creating Slack integrations",
-  "main": "integration.js",
+  "main": "integrator.js",
   "scripts": {
     "test": "node_modules/.bin/mocha"
   },
