--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "slack-integrator",
   "version": "0.0.4",
   "description": "Express-based starter kit for creating Slack integrations",
+  "homepage": "http://github.com/mdb/node-slack-integrator",
   "main": "integrator.js",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/mdb/node-slack-integrator.git"
+  },
   "scripts": {
     "test": "node_modules/.bin/mocha"
   },
