--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "request": "^2.51.0"
   },
   "devDependencies": {
-    "mocha": "1.14.x",
-    "supertest": "0.15.x",
-    "nock": "0.51.x"
+    "mocha": "2.4.4",
+    "supertest": "1.1.0",
+    "nock": "7.0.2"
   }
 }
