--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: node_js
 node_js:
-  - 4.2.1
-  - 0.10
+  - 6
+  - 5
+  - 4
+
+matrix:
+  allow_failures:
+    - node_js: 5
+    - node_js: 4
